add FreeSulfure to WineRecord
