# app/Http/Resources/WineRecordResource.php
@@ -24,8 +24,8 @@ class WineRecordResource extends JsonResource
             WineRecord::ID => $this->id,
             WineRecord::WINE_EVIDENCE_ID => $this->wine_evidence_id,
             WineRecord::WINE_RECORD_TYPE => WineRecordType::findOrFail($this->wine_record_type_id),
-            WineRecord::TITLE => $this->title,
             WineRecord::DATE => $this->date,
+            WineRecord::FREE_SULFURE => $this->free_sulfure,
             WineRecord::NOTE => $this->note,
             Model::CREATED_AT => $this->created_at,
             Model::UPDATED_AT => $this->updated_at,
